modif visual code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Damian Laird – Portfolio Digital</h1>
         <p>
-            <a href="documents/cv_damian laird_imad_2025final.pdf Laird_IMAD_2025FINAL.pdf" target="_blank">
+            <a href="documents/CV_Damian Laird_IMAD_2025FINAL.pdf" target="_blank">
                 <i class="fas fa-file-pdf"></i> Télécharger mon CV
             </a>
         </p>
@@ -60,11 +60,11 @@
                         <div class="caption">Ancien site web 2011-2019</div>
                     </div>
                     <div class="slide fade">
-                        <img src="images/2020_app accueil.jpg" alt="Capture d'écran 2020 accueil" style="width:100%" onclick="openLightbox(this)">
+                        <img src="images/2020_app_accueil.jpg" alt="Capture d'écran 2020 accueil" style="width:100%" onclick="openLightbox(this)">
                         <div class="caption">Site web 2020-2022</div>
                     </div>
                     <div class="slide fade">
-                        <img src="images/2020_app accueil 2.jpg" alt="Capture d'écran 2020 accueil 2" style="width:100%" onclick="openLightbox(this)">
+                        <img src="images/2020_app_accueil_2.jpg" alt="Capture d'écran 2020 accueil 2" style="width:100%" onclick="openLightbox(this)">
                         <div class="caption">Site web 2020-2022</div>
                     </div>
                     <div class="slide fade">
@@ -72,7 +72,7 @@
                         <div class="caption">Site web 2022-2025</div>
                     </div>
                     <div class="slide fade">
-                        <img src="images/25_prototype_Acc.jpg" alt="Capture d'écran prototype 2025" style="width:100%" onclick="openLightbox(this)">
+                        <img src="images/25_prototype_acc.jpg" alt="Capture d'écran prototype 2025" style="width:100%" onclick="openLightbox(this)">
                         <div class="caption">(Prototype) Site web 2025</div>
                     </div>
                     <!-- Navigation buttons -->
@@ -179,13 +179,13 @@
                             <td style="width: 50%; vertical-align: top; text-align: center;">
                                 <!-- Première image avec lien hypertexte -->
                                 <a href="https://www.appartenances.ch/activites/interpretariat-communautaire" target="_blank">
-                                    <img src="images/25_ic1.jpg" alt="Capture d'écran 25_IC1" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                                    <img src="images/25_IC1.jpg" alt="Capture d'écran 25_IC1" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                                 </a>
                                 <p style="margin-top: 10px; font-size: 14px; font-style: italic;">IC: Figure 1</p>
 
                                 <!-- Deuxième image avec lien hypertexte -->
                                 <a href="https://www.appartenances.ch/activites/interpretariat-communautaire/comment-travailler-avec-un-interprete" target="_blank">
-                                    <img src="images/25_ic_guide.jpg" alt="Capture d'écran 25_IC_guide" style="width: 100%; margin-top: 20px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                                    <img src="images/25_IC_guide.jpg" alt="Capture d'écran 25_IC_guide" style="width: 100%; margin-top: 20px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                                 </a>
                                 <p style="margin-top: 10px; font-size: 14px; font-style: italic;">IC: Figure 2</p>
                             </td>
@@ -275,15 +275,15 @@
                 <!-- Slider for Projet 2: Intranet -->
                 <div class="slideshow-container" id="slider-intranet">
                     <div class="slide fade">
-                        <img src="images/25_intra 1.jpg" alt="Capture d'écran Intranet 1" style="width:100%" onclick="openLightbox(this)">
+                        <img src="images/25_intra_1.jpg" alt="Capture d'écran Intranet 1" style="width:100%" onclick="openLightbox(this)">
                         <div class="caption">Intranet - Page d'accueil</div>
                     </div>
                     <div class="slide fade">
-                        <img src="images/25_intra acc 2.jpg" alt="Capture d'écran Intranet 2" style="width:100%" onclick="openLightbox(this)">
+                        <img src="images/25_intra_acc_2.jpg" alt="Capture d'écran Intranet 2" style="width:100%" onclick="openLightbox(this)">
                         <div class="caption">Intranet - Page d'accueil 2</div>
                     </div>
                     <div class="slide fade">
-                        <img src="images/25_intra mde.jpg.jpg" alt="Capture d'écran Modes d'emploi" style="width:100%" onclick="openLightbox(this)">
+                        <img src="images/25_intra_mde.jpg" alt="Capture d'écran Modes d'emploi" style="width:100%" onclick="openLightbox(this)">
                         <div class="caption">Modes d'emploi</div>
                     </div>
                     <div class="slide fade">
@@ -389,7 +389,7 @@
             <!-- Colonne gauche : captures d'écran -->
             <td style="width: 50%; vertical-align: top; text-align: center; padding: 10px;">
                 <a href="https://www.example.com" target="_blank">
-                    <img src="Images/25_intra mde.jpg.jpg" alt="Capture d'écran 1" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="images/25_intra_mde.jpg" alt="Capture d'écran 1" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                 </a>
                 <p style="margin-top: 10px; font-size: 14px; font-style: italic;">Figure 1 : Description de l'image</p>
             </td>
@@ -437,7 +437,7 @@
             <!-- Colonne gauche : captures d'écran -->
             <td style="width: 50%; vertical-align: top; text-align: center; padding: 10px;">
                 <a href="https://www.example.com" target="_blank">
-                    <img src="Images/25_intra_mde2.jpg" alt="Capture d'écran 3" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="images/25_intra_mde2.jpg" alt="Capture d'écran 3" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                 </a>
                 <p style="margin-top: 10px; font-size: 14px; font-style: italic;">Figure 3 : Description de l'image</p>
             </td>
@@ -461,7 +461,7 @@
             <!-- Colonne gauche : captures d'écran -->
             <td style="width: 50%; vertical-align: top; text-align: center; padding: 10px;">
                 <a href="https://www.example.com" target="_blank">
-                    <img src="Images/25_intra_annuaire.jpg" alt="Capture d'écran 4" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="images/25_intra_annuaire.jpg" alt="Capture d'écran 4" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                 </a>
                 <p style="margin-top: 10px; font-size: 14px; font-style: italic;">Figure 4 : Description de l'image</p>
             </td>
