--- a/index.html
+++ b/index.html
@@ -483,25 +483,103 @@
 
             <article>
                 <h3>Projet 3 : Digitalisation de la formation</h3>
-                <button class="accordion">Contexte</button>
-                <div class="panel">
-                    <p>Réponse à la crise sanitaire et accélération numérique EDUQUA. Mise en place d’une infrastructure complète pour la formation hybride.</p>
+
+                <!-- Slideshow for Projet 3: Digitalisation de la formation -->
+                <div class="slideshow-container" id="slider-digitalisation">
+                    <div class="slide fade">
+                        <img src="images/digitalisation_slide1.jpg" alt="Slide 1 - Digitalisation" style="width:100%" onclick="openLightbox(this)">
+                        <div class="caption">Slide 1 - Présentation générale</div>
+                    </div>
+                    <div class="slide fade">
+                        <img src="images/digitalisation_slide2.jpg" alt="Slide 2 - Formation" style="width:100%" onclick="openLightbox(this)">
+                        <div class="caption">Slide 2 - Formation</div>
+                    </div>
+                    <div class="slide fade">
+                        <img src="images/digitalisation_slide3.jpg" alt="Slide 3 - Matériel" style="width:100%" onclick="openLightbox(this)">
+                        <div class="caption">Slide 3 - Matériel</div>
+                    </div>
+                    <div class="slide fade">
+                        <img src="images/digitalisation_slide4.jpg" alt="Slide 4 - Résultats" style="width:100%" onclick="openLightbox(this)">
+                        <div class="caption">Slide 4 - Résultats</div>
+                    </div>
+                    <!-- Navigation buttons -->
+                    <a class="prev" onclick="plusSlides(-1, 'slider-digitalisation')">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1, 'slider-digitalisation')">&#10095;</a>
                 </div>
-                <button class="accordion">Objectifs</button>
-                <div class="panel">
-                    <p>Visio, tablettes, LMS Moodle, gestion MDM, outils interactifs, guides utilisateurs, accompagnement individuel.</p>
+                <br>
+                <!-- Points indicators -->
+                <div style="text-align:center">
+                    <span class="dot" onclick="currentSlide(1, 'slider-digitalisation')"></span>
+                    <span class="dot" onclick="currentSlide(2, 'slider-digitalisation')"></span>
+                    <span class="dot" onclick="currentSlide(3, 'slider-digitalisation')"></span>
+                    <span class="dot" onclick="currentSlide(4, 'slider-digitalisation')"></span>
                 </div>
-                <button class="accordion">Mon rôle</button>
+
+                <button class="accordion">🎯 Coordinateur</button>
                 <div class="panel">
-                    <p>Coordinateur, technicien, formateur. Création de contenus, guides, supports d’appropriation pour tous les publics.</p>
+                    <p>
+                        Afin de répondre aux défis posés par la crise sanitaire, j’ai été nommé responsable du projet de digitalisation de la formation, en lien direct avec la direction. J’ai mis en place un groupe de travail réunissant les responsables de secteur (interprétariat communautaire, espaces femmes, espaces hommes, administration), la direction, la référente qualité et mon secteur. Ensemble, nous avons recensé les besoins pédagogiques et technologiques 📄 <a href="#">lien vers le document de cadrage</a>.
+                    </p>
+                    <p>
+                        Le budget global s’élevait à CHF 70’000, dont une partie provenait de la Loterie Romande. L’essentiel était dédié à l’acquisition de matériel informatique, les logiciels étant limités par contrainte budgétaire. En tant que garant du budget, j’ai assuré le suivi financier 📊 <a href="#">document budgétaire</a> et canalisé les initiatives concurrentes en imposant une vision unifiée et pragmatique.
+                    </p>
+                    <p>
+                        Le planning général du projet a été formalisé 🗓 <a href="#">lien planning</a>. Plusieurs imprévus techniques ont surgi, notamment la gestion de plus de 70 tablettes. J’ai alors proposé d’intégrer un système de Mobile Device Management (MDM) via Miradore, configuré par un expert externe, évitant CHF 5’000 de frais d’installation.
+                    </p>
+                    <p>
+                        Côté LMS, après une prospection détaillée 📄 <a href="#">comparatif LMS</a>, j’ai opté pour Moodle auto-hébergé via Infomaniak, garantissant autonomie et économie. J’ai ensuite supervisé la configuration de versions sectorielles du LMS, aujourd’hui utilisées en production.
+                    </p>
                 </div>
-                <button class="accordion">Résultats</button>
+
+                <button class="accordion">👩‍🏫 Formateur</button>
                 <div class="panel">
-                    <p>Autonomisation des secteurs, baisse des sollicitations, continuité pédagogique assurée pendant et après la pandémie.</p>
+                    <p>J’ai accompagné deux profils cibles :</p>
+                    <ul>
+                        <li>Les collaborateurs et formatrices internes à Appartenances</li>
+                        <li>Les participant·es aux formations des Espaces sociaux</li>
+                    </ul>
+                    <p>
+                        La majorité des publics formés avait un niveau faible de littératie numérique, avec parfois une forte résistance au changement. J’ai misé sur une approche mixte : création de ressources accessibles, mobilisation de personnes relais, et ateliers ciblés.
+                    </p>
+                    <p>Pour les formations à distance, ma stratégie consistait à :</p>
+                    <ul>
+                        <li>Préparer les participant·es (envoi de fiches techniques avant les sessions)</li>
+                        <li>Créer des sous-groupes Zoom préconfigurés pour faciliter la dynamique</li>
+                        <li>Utiliser des supports interactifs (Padlet, Google Docs) pour la co-construction</li>
+                        <li>Restituer collectivement les résultats en plénière</li>
+                    </ul>
+                    <p>📌 Exemples de Padlet utilisés :</p>
+                    <ul>
+                        <li><a href="#">Padlet 1 – Approches transculturelles</a></li>
+                        <li><a href="#">Padlet 2 – Formation ARPIH</a></li>
+                    </ul>
+                </div>
+
+                <button class="accordion">🛠 Technicien</button>
+                <div class="panel">
+                    <p>
+                        J’ai effectué une prospection complète des solutions techniques (LMS et MDM), comparé les coûts, les modèles d’hébergement et les conditions d’autonomie. Ma connaissance des CMS m’a permis de configurer Moodle de manière souple et efficace.
+                    </p>
+                    <p>
+                        Côté MDM, Miradore s’est révélé complexe à prendre en main, mais j’ai pu l’installer, créer les profils, enregistrer les appareils et configurer les règles de sécurité sans prestataire externe, avec l’aide ponctuelle d’un technicien de confiance. J’ai rédigé l’ensemble des procédures de configuration pour garantir la pérennité du dispositif.
+                    </p>
+                </div>
+
+                <button class="accordion">📚 Créateur de contenu</button>
+                <div class="panel">
+                    <p>Pour soutenir l’adoption, j’ai produit des ressources pédagogiques sous plusieurs formats :</p>
+                    <ul>
+                        <li>📊 Slideshows et fiches explicatives créées sur PowerPoint</li>
+                        <li>📄 PDF téléchargeables ou imprimables</li>
+                        <li>🎞 Vidéos d’utilisation (Zoom, tablette, plateforme Moodle)</li>
+                        <li>🌀 GIFs animés intégrés à l’intranet (Joomla)</li>
+                    </ul>
+                    <p>
+                        Ces ressources ont été publiées dans une section dédiée de l’intranet. Elles sont encore utilisées aujourd’hui, preuve de leur utilité durable et de l’appropriation réussie par les équipes.
+                    </p>
                 </div>
             </article>
 
-           
         <section id="contact">
             <h2>Contact</h2>
             <p>Email : damian@example.com</p>
@@ -514,22 +592,3 @@
     <script src="script.js"></script>
     <script type="module" src="chatbot.js"></script>
     
-    <!-- Bulle de chat flottante -->
-    <div id="chat-button" onclick="toggleChat()">
-      💬
-    </div>
-
-    <!-- Fenêtre de chat -->
-    <div id="chat-window" style="display: none;">
-      <div class="chat-header">
-        <span>Assistant Portfolio</span>
-        <button onclick="toggleChat()">✕</button>
-      </div>
-      <div id="chat-messages"></div>
-<div id="chat-input">
-  <input type="text" id="user-input" placeholder="Posez votre question...">
-  <button onclick="sendMessage()">Envoyer</button>
-</div>
-    </div>
-</body>
-</html>
