--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
                             <td style="width: 50%; vertical-align: top; text-align: center;">
                                 <!-- Première image avec lien hypertexte -->
                                 <a href="https://www.appartenances.ch/activites/interpretariat-communautaire" target="_blank">
-                                    <img src="images/25_IC1.jpg" alt="Capture d'écran 25_IC1" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                                    <img src="images/25_ic1.jpg" alt="Capture d'écran 25_IC1" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                                 </a>
                                 <p style="margin-top: 10px; font-size: 14px; font-style: italic;">IC: Figure 1</p>
 
                                 <!-- Deuxième image avec lien hypertexte -->
                                 <a href="https://www.appartenances.ch/activites/interpretariat-communautaire/comment-travailler-avec-un-interprete" target="_blank">
-                                    <img src="images/25_IC_guide.jpg" alt="Capture d'écran 25_IC_guide" style="width: 100%; margin-top: 20px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                                    <img src="images/25_ic_guide.jpg" alt="Capture d'écran 25_IC_guide" style="width: 100%; margin-top: 20px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                                 </a>
                                 <p style="margin-top: 10px; font-size: 14px; font-style: italic;">IC: Figure 2</p>
                             </td>
