--- a/index.html
+++ b/index.html
@@ -520,21 +520,21 @@
             <td style="width: 50%; vertical-align: top; text-align: center; padding: 10px;">
                 <div class="slideshow-container" id="slider-mde-3">
                     <div class="slide fade">
-                        <img src="images/25_intra_mde_écran1.jpg" alt="Figure 3 - Slide 1" onclick="openLightbox(this, 'slider-mde-3')">
+                        <img src="images/25_intra_mde_ecran1.jpg" alt="Figure 3 - Slide 1" onclick="openLightbox(this, 'slider-mde-3')">
                     </div>
                     <div class="slide fade">
-                        <img src="images/25_intra_mde_écran2.jpg" alt="Figure 3 - Slide 2" onclick="openLightbox(this, 'slider-mde-3')">
+                        <img src="images/25_intra_mde_ecran2.jpg" alt="Figure 3 - Slide 2" onclick="openLightbox(this, 'slider-mde-3')">
                     </div>
                     <div class="slide fade">
-                        <img src="images/25_intra_mde_écran3.jpg" alt="Figure 3 - Slide 1" onclick="openLightbox(this, 'slider-mde-3')">
+                        <img src="images/25_intra_mde_ecran3.jpg" alt="Figure 3 - Slide 1" onclick="openLightbox(this, 'slider-mde-3')">
                     </div>
                     <div class="slide fade">
-                        <img src="images/25_intra_mde_écran4.jpg" alt="Figure 3 - Slide 2" onclick="openLightbox(this, 'slider-mde-3')">
+                        <img src="images/25_intra_mde_ecran4.jpg" alt="Figure 3 - Slide 2" onclick="openLightbox(this, 'slider-mde-3')">
                     </div>                    <div class="slide fade">
-                        <img src="images/25_intra_mde_écran5.jpg" alt="Figure 3 - Slide 1" onclick="openLightbox(this, 'slider-mde-3')">
+                        <img src="images/25_intra_mde_ecran5.jpg" alt="Figure 3 - Slide 1" onclick="openLightbox(this, 'slider-mde-3')">
                     </div>
                     <div class="slide fade">
-                        <img src="images/25_intra_mde_écran6.jpg" alt="Figure 3 - Slide 2" onclick="openLightbox(this, 'slider-mde-3')">
+                        <img src="images/25_intra_mde_ecran6.jpg" alt="Figure 3 - Slide 2" onclick="openLightbox(this, 'slider-mde-3')">
                     </div>
                     <!-- Caption -->
                     <p style="margin-top: 10px; font-size: 14px; font-style: italic;">Figure 3 : Ressources collaboratives</p>
