--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
         <ul>
             <li><a href="#intro">Accueil</a></li>
-            <li><a href="#parcours">Parcours</a></li>
             <li><a href="#competences">Compétences</a></li>
-            <li><a href="#projets">Projets</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#slider-site-web">Site web</a></li>
+            <li><a href="#slider-intranet">Intranet</a></li>
+            <li><a href="#slider-digitalisation">Digitalisation de la formation</a></li>
         </ul>
     </nav>
     <main>
