--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
                     <span class="dot" onclick="currentSlide(5, 'slider-site-web')"></span>
                 </div>
                 <!-- Lightbox -->
-                <div id="lightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8); z-index: 1000; justify-content: center; align-items: center;">
-                    <span class="close" onclick="closeLightbox()" style="position: absolute; top: 20px; right: 30px; font-size: 30px; color: white; cursor: pointer;">&times;</span>
-                    <a class="prev" onclick="changeLightboxSlide(-1)" style="position: absolute; top: 50%; left: 20px; font-size: 30px; color: white; cursor: pointer; transform: translateY(-50%);">&#10094;</a>
-                    <img id="lightbox-img" src="" alt="Lightbox Image" style="max-width: 90%; max-height: 90%; border-radius: 8px;">
-                    <a class="next" onclick="changeLightboxSlide(1)" style="position: absolute; top: 50%; right: 20px; font-size: 30px; color: white; cursor: pointer; transform: translateY(-50%);">&#10095;</a>
+                <div id="lightbox" class="lightbox">
+                    <span class="close" onclick="closeLightbox()">&times;</span>
+                    <img id="lightbox-img" class="lightbox-content" alt="Lightbox Image">
+                    <a class="prev" onclick="changeLightboxSlide(-1)">&#10094;</a>
+                    <a class="next" onclick="changeLightboxSlide(1)">&#10095;</a>
                 </div>
                 <button class="accordion">Contexte</button>
                 <div class="panel">
