--- a/index.html
+++ b/index.html
@@ -393,6 +393,10 @@
                                         <span class="dot" onclick="currentSlide(1, 'slider-interpretariat')"></span>
                                         <span class="dot" onclick="currentSlide(2, 'slider-interpretariat')"></span>
                                     </div>
+                                    <br>
+                                    <!-- Hyperlink -->
+    <a href="https://www.appartenances.ch/activites/interpretariat-communautaire" target="_blank" style="text-decoration: none; color: #00497d; font-weight: bold;">Vers la page</a>
+</td>
                                 </td>
                             </div>
                                 <!-- Colonne droite : accordéons -->
@@ -510,6 +514,8 @@
                             <span class="dot" onclick="currentSlide(1, 'slider-programme')"></span>
                             <span class="dot" onclick="currentSlide(2, 'slider-programme')"></span>
                           </div>
+                          <br>
+                          <a href="https://www.appartenances.ch/activites/formation/programme-de-formation-migration-diversite-interculturalite-2025" target="_blank" style="text-decoration: none; color: #00497d; font-weight: bold;">Vers la page</a>
                         </td>
                         <td style="width: 50%; vertical-align: top;">
                           <button class="accordion">OBJECTIFS DE LA PAGE</button>
